--- a/leanbit-file-engine-ui/src/index.css
+++ b/leanbit-file-engine-ui/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,16 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+body,
+html {
+  margin: 0;
+  overflow-x: hidden;
+  font-family: "Montserrat", serif;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
 }
